# ssfw

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  example.json  example2.json
documentation/: weird_diagrams.xml
src/: application.cpp  application.h  core.h  event.cpp  event.h  main.cpp  model.cpp  model.h  renderer.cpp  renderer.h  simulation.cpp  simulation.h  utils.h
src/components/: component.cpp  component.h  generator.cpp  generator.h  input.cpp  input.h  output.cpp  output.h  router.cpp  router.h  server.cpp  server.h  service_center.cpp  service_center.h  sink.cpp  sink.h
